package net.game.finalfantasy;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FinalfantasyApplication {

    public static void main(String[] args) {
        SpringApplication.run(FinalfantasyApplication.class, args);
    }

}
